<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_120dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:background="@drawable/item_touch_bg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/customer_id_imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_customer_bg"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="@dimen/padding_10dp"
            android:paddingLeft="@dimen/padding_10dp"
            android:paddingRight="@dimen/padding_10dp"
            android:paddingTop="@dimen/padding_10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="@dimen/width_16dp"
                        android:layout_height="@dimen/height_16dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/common_oval_primary_bg"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/customer_type_flag"
                            android:textColor="@color/common_white"
                            android:textSize="@dimen/font_10sp"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/customer_id_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_5dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="@color/font_primary"
                        android:textSize="@dimen/font_16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/customer_device_count"
                        android:textColor="@color/font_secondary"
                        android:textSize="@dimen/font_12sp"/>

                    <View
                        android:layout_width="@dimen/line_height_1dp"
                        android:layout_height="@dimen/height_8dp"
                        android:background="@color/font_secondary"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/customer_alert_count"
                        android:textColor="@color/font_secondary"
                        android:textSize="@dimen/font_12sp"/>

                    <View
                        android:layout_width="@dimen/line_height_1dp"
                        android:layout_height="@dimen/height_8dp"
                        android:background="@color/font_secondary"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/customer_order_count"
                        android:textColor="@color/font_secondary"
                        android:textSize="@dimen/font_12sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/customer_id_device_count"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_13sp"/>

                    <TextView
                        android:id="@+id/customer_id_alert_count"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_13sp"/>

                    <TextView
                        android:id="@+id/customer_id_order_count"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_13sp"/>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <TextView
                    android:id="@+id/customer_id_manager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/font_thirdary"
                    android:textSize="@dimen/font_12sp"/>

            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>